# bipu

./: .env.example  .gitattributes  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_CLEANUP_REPORT.md  ASR_STREAMING_FIX_SUMMARY.md  BLUETOOTH_COMPLETE_VERIFICATION_REPORT.md  BLUETOOTH_DIAGNOSTIC_COMPLETE.md  BLUETOOTH_DIAGNOSTIC_GUIDE.md  BLUETOOTH_SCAN_DIAGNOSIS.md  BUGFIX_SUMMARY.md  CHECKLIST.md  CODE_CHANGES_SUMMARY.md  COMPLETE_REFACTOR_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CORS_FIX.md  FINAL_PAGER_REFACTOR_REPORT.md  HOSTING_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INCALL_PAGE_UI_OPTIMIZATION.md  LOGIN_TOKEN_ANALYSIS.md  LOGIN_TOKEN_IMPROVEMENTS.md  LOGIN_TOKEN_QUICKREF.md  LONG_POLLING_TIMEOUT_FIX.md  MOBILE_LIB_AUDIT_REPORT.md  NEW_PAGER_ARCHITECTURE_SUMMARY.md  OPTIMIZATION_COMPLETION_REPORT.md  OPTIMIZATION_REPORT.md  PAGER_ANALYSIS_REPORT.md  PAGER_BUSINESS_LOGIC_CHECKLIST.md  PAGER_COMPLETE_FIX_SUMMARY.md  PAGER_FIX_SUMMARY.md  PAGER_FLOW_OPTIMIZATION_REPORT.md  PAGER_GALLERY_RESTORED.md  PAGER_NEW_GALLERY_IMPLEMENTED.md  PAGER_PROJECT_COMPLETION_SUMMARY.md  PAGER_QUICK_REFERENCE.md  PAGER_REFACTOR_SUMMARY.md  PAGER_UI_OPTIMIZATION.md  QUICK_REFERENCE.md  (+17 more)
backend/: .dockerignore  .env.example  API_SCHEMA_FIX_REPORT.md  ARCHITECTURE_REVIEW.md  AVATAR_DEPLOYMENT_CHECKLIST.md  AVATAR_FIXES_SUMMARY.md  BACKEND_CODE_REVIEW.md  CODE_OPTIMIZATION_SUMMARY.md  CONNECTION_POOL_OPTIMIZATION.md  Dockerfile  POLLING_OPTIMIZATION_REPORT.md  SCHEMA_OPTIMIZATION_REPORT.md  SUBSCRIPTION_USAGE_GUIDE.md  alembic.ini  bipupu.db  create_migration.py  db.py  migrate.py  (+5 more)
(+1099 files in other folders)
