[project]
name = "bipupu"
version = "0.1.0"
description = "bipupu fastapi backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.5.3",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "jinja2>=3.1.0",
    "passlib[argon2]>=1.7.4",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]   

[tool.deadcode]
exclude = [".venv", "venv", "__pycache__", "*.pyc", "migrations"]
ignore-names = ["*TestCase", "*Mixin", "test_*"]
